Fixed typos in /doc/Developer/eqPly and updated eq UML figure.
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/eqPly/Semesterarbeit.tex
+++ b/Developer/eqPly/Semesterarbeit.tex
@@ -30,7 +30,7 @@
 \include{chapters/conclusion}
 \include{chapters/appendix}
 
-\listoffigures
+%\listoffigures
 %\listoftables
 
 %\renewcommand{\glossaryname}{Glossar}
