--- a/Developer/eqPly/bib/references.bib
+++ b/Developer/eqPly/bib/references.bib
@@ -120,10 +120,10 @@
 }
 
 @misc{cyberware,
-	title = {Cyberware Rapid 3D Scanners},
+	title = {Cyberware 3D Scanner Samples FTP Directory},
 	publisher = {Web Site},
-	url = {http://www.cyberware.com/},
-	note = {\url{http://www.cyberware.com/} 
+	url = {ftp://ftp.cyberware.com/pub/samples/},
+	note = {\url{ftp://ftp.cyberware.com/pub/samples/} 
 	       (letzter Abruf im September 2007)},
 	key = {ply:02}
 }
